Fixed problem when a tab is clicked twice, navbar is rendered, or dashboard or sell page is rendered instead.

--- a/partials/account.html
+++ b/partials/account.html
@@ -1,128 +1,6 @@
-<div class="user_setting">
-        
-     <form id="account_setting_form" method="POST" action ="/controllers/accountSettings">
-     <br>
-     
-     <a class="btn btn_red" data-toggle="modal" data-target="#modal">Change Password</a>
-     <br>
-     
-     <label>First Name</label>
-     <input type="text" id="firstName_account" name="firstName" >
-     <div id="firstName_account_error" class="account_error"></div> 
-     <br>
-     
-     <label>Last Name</label>
-     <input type="text" id="lastName_account" name="lastName">
-     <div id="lastName_account_error" class="account_error"></div>
-     <br>
-     
-     <label>City</label>
-     <input type="text" id="city_account" name="city">
-     <div id="city_account_error" class="account_error"></div>
-     <br>
-     
-     <label>Country</label>
-     <input type="text" id="country_account" name="country" list="countryList">
-     <datalist id="countryList">
-     </datalist>
-           <div id="country_account_error" class="account_error"></div>
-     <br>
-     
-     <div class="action_btns">
-                  
-         <div class="save_changes">
-             <input type="submit" id="save_change" value="Save Changes" class="btn btn_red">
-             <div id="save_message" class="account_error" style="text-align:center;"></div>
-         </div>
-         
-     </div>
-    </form>
-    </div>
-
-     <div id="modal" class="modal fade" role="dialog">   
-      
-      <div class="modal-dialog">
-          
-          <div class="modal-content">
-              
-              <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <span class="header_title">Change Password</span>
-                </div> 
-              
-                    <div class="modal-body">
-        
-                        <div class="user_login" style="display:block;">
-
-                            <form id="password_setting_form" method="POST" action ="/controllers/accountSettings">
-          
-                                <label>Old Password</label>
-                                <input type="password" id="old_password" name="password">
-                                <div id="error_old_password" class="account_error"></div>
-                                <br>  
-     
-                                <label>New Password</label>
-                                <input type="password" id="new_password" name="password">
-                                <div id="error_new_password" class="account_error"></div>
-                                <br>  
-     
-                                <label>Confirm New Password</label>
-                                <input type="password" id="confirm_new_password" name="password">
-                                <div id="error_confirm_password" class="account_error"></div>
-                                <br> 
-     
-                                <div class="action_btns">
-                  
-                                    <div class="save_changes">
-                                    <input type="submit" id="save_password" value="Save Changes" class="btn btn_red">
-                                    <div id="error_save_password" class="account_error"></div>
-                                    </div>
-         
-                                </div> 
-            
-                            </form>
-            
-                        </div>
-    
-                    </div>
-    
-            </div>
-    
-        </div>
-    </div>
-    
-     <div class="modal fade" id="forgot_password" role="dialog">
-            <div class="modal-dialog">
-                  <!-- Modal content-->
-                <div class="modal-content">
-                    
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <span class="header_title">Forgot Password</span>
-                    </div>
-                    
-                    <form>
-                        <p>Please enter your email so your password can be reset!</p>
-                        <br>
-                        <label  for="emailLabel">Email</label>
-                        <input type="text" id="email_password" name="emailRegister">
-                        <div id="error_email_password"></div>
-                     
-                        <div class="action_btns"> 
-                            <div class="one_half">
-                                <a class="btn back_btn" href="#" data-dismiss="modal">Back</a>
-                            </div>
-                             
-                            <div class="one_half last">
-                                <input type="submit" id="forgot_password_button" value="Submit" class="btn btn_red">
-                            </div> 
-                        </div>    
-                    </form>
-                </div>
-            </div> 
-        </div>
+<button id="account_info">Edit Account Information</button>
+<button id="message">Messages</button>
     
     <script src="/components/jquery/jquery-2.2.3.js" type="text/javascript" charset="utf-8"></script>
     <link href="/partials/login_style.css" rel="stylesheet">
-    <script src="/partials/countries.js" type="text/javascript" charset="utf-8"></script>
     <script src="/partials/account.js" type="text/javascript" charset="utf-8"></script>
