Able to navigate between account and account-settings page

--- a/partials/account-settings.html
+++ b/partials/account-settings.html
@@ -1,5 +1,5 @@
-<div class="user_setting">
-        
+<i id="back-button" class="fa fa-angle-left fa-3x"></i> 
+<div class="user_setting">     
      <form id="account_setting_form" method="POST" action ="/controllers/accountSettings">
      <br>
      
