--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -7,7 +7,8 @@
     <link href="/components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/components/layout.css" rel="stylesheet">
     <script src="/components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-
+    <link rel="stylesheet" href="/components/font-awesome-4.6.3/css/font-awesome.min.css">
+    
     <script src="/partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
     <script src="/partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
     <script src="/partials/authentication.js" type="text/javascript" charset="utf-8"></script>
