--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -36,7 +36,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a id="sellPage" class="page" data-page="sell" href="#">Sell <span class="sr-only">(current)</span></a></li>
+                <li><a id="sellPage" class="page" data-page="sell" href="#">Sell <span class="sr-only">(current)</span></a></li>
                 <li><a id="wantedPage" class="page" data-page="wanted" href="#">Wanted</a></li>
                 <li><a id="accountPage" class="page" data-page="account" href="#">Account Settings</a></li>
             </ul>
