--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -14,6 +14,11 @@
     <script src="/partials/authentication.js" type="text/javascript" charset="utf-8"></script>
 
     <title>ShoeTaku</title>
+    <style>
+    	#sellPostList{
+    		list-style-type: none;
+    	}
+    </style>
 
 </head>
 <body> 
@@ -99,12 +104,12 @@
 			<div id="recentSellPost">
 				<h2>Recent Sell Posts</h2>
 				<div id="sellPosts">
-					<ul>
-						<li>1</li>
-						<li>2</li>
-						<li>3</li>
-						<li>4</li>
-						<li>5</li>
+					<ul id="sellPostList">
+						<li><a>1</a></li>
+						<li><a>2</a></li>
+						<li><a>3</a></li>
+						<li><a>4</a></li>
+						<li><a>5</a></li>
 					</ul>
 				</div>
 			</div>
@@ -115,5 +120,6 @@
 			</div>
 		</div>
 	</div>
+	<script src="/partials/dashboard-controller.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
