--- a/partials/sell.html
+++ b/partials/sell.html
@@ -121,6 +121,30 @@
 	<div class="col-md-4 postPrice"></div>
 	<div class="col-md-4 postCreated"></div>
 
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
 </div>
 
 <div id="listofPages">
