wanted.js added

--- a/partials/sell.html
+++ b/partials/sell.html
@@ -237,6 +237,6 @@
 	    </div>
 	</div>
 	<script src="/partials/sellPage-controller.js" type="text/javascript" charset="utf-8"></script>
-<script src="/partials/pagination.js" type="text/javascript" charset="utf-8"></script>
+<script src="/partials/pagination-sell.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
