--- a/partials/wanted.html
+++ b/partials/wanted.html
@@ -50,7 +50,93 @@
 
 	</nav>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadChoice">New Wanted</button>
+<div id="postTitle">
+	<h1>Wanted Shoes Post</h1>
+</div>
+
+
+<div id="postInfoNav" class="row">
+	<div class="col-md-4">
+		title
+	</div>
+	<div class="col-md-4">
+		price
+	</div>
+	<div class="col-md-4">
+		created 
+	</div>
+</div>
+
+<div id="articleArea" class="row">
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+	<div class="col-md-4 postTitle">
+		<a href="#"></a>
+	</div>
+	<div class="col-md-4 postPrice"></div>
+	<div class="col-md-4 postCreated"></div>
+
+</div>
+
+<div id="listofPages">
+	<h4> Display pagination </h4>
+	<a href="#" id="1"></a>
+</div>
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadChoice">I want to sell my shoes!</button>
 <div class="modal fade" id="uploadChoice" role="dialog">
 	<div class="modal-dialog">
 		<!-- Modal content-->
@@ -206,5 +292,9 @@
 		</div>
 	</div>
 </div>
+
+
+
+<script src="/partials/pagination-wanted.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
