--- a/partials/account-settings.html
+++ b/partials/account-settings.html
@@ -7,6 +7,9 @@
     <link href="/components/layout.css" rel="stylesheet">
     <script src="/components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
     <link rel="stylesheet" href="/components/font-awesome-4.6.3/css/font-awesome.min.css">
+    <script src="/partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/partials/authentication.js" type="text/javascript" charset="utf-8"></script>
 
     <title>ShoeTaku</title>
 
@@ -39,7 +42,7 @@
                 <ul class="nav navbar-nav">
                     <li><a id="sellPage" class="page" data-page="sell" href="sell.html">Sell <span class="sr-only">(current)</span></a></li>
                     <li><a id="wantedPage" class="page" data-page="wanted" href="wanted.html">Wanted</a></li>
-                    <li><a id="accountPage" class="page" data-page="account" href="account-settings.html">Account Settings</a></li>
+                    <li><a id="accountPage" class="page" data-page="account" href="account.html">Account</a></li>
                 </ul>
                 <form class="navbar-form navbar-left" role="search">
                     <div class="form-group">
