--- a/partials/wanted.html
+++ b/partials/wanted.html
@@ -39,7 +39,7 @@
 	            <ul class="nav navbar-nav">
 	                <li><a id="sellPage" class="page" data-page="sell" href="sell.html">Sell <span class="sr-only">(current)</span></a></li>
 	                <li><a id="wantedPage" class="page" data-page="wanted" href="wanted.html">Wanted</a></li>
-	                <li><a id="accountPage" class="page" data-page="account" href="account-settings.html">Account Settings</a></li>
+	                <li><a id="accountPage" class="page" data-page="account" href="account.html">Account</a></li>
 	            </ul>
 	            <form class="navbar-form navbar-left" role="search">
 	                <div class="form-group">
