--- a/partials/wanted.html
+++ b/partials/wanted.html
@@ -135,10 +135,11 @@
 
 </div>
 
-<div id="listofPages">
-	<h4> Display pagination </h4>
-	<a href="#" id="1"></a>
-</div>
+<nav aria-label="Page navigation">
+	<ul class="pagination" id="listofPages">
+		<a href="#" id="1"></a>
+	</ul>
+</nav>
 
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadChoice">I want to buy shoes!</button>
 <div class="modal fade" id="uploadChoice" role="dialog">
